2022-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/heif.c: If module is compiled, but HasHEIF is not
        defined, then RegisterHEIFImage/UnregisterHEIFImage
        implementations are empty.

        * coders/jxl.c: If module is compiled, but HasJXL is not defined,
        then RegisterJXLImage/UnregisterJXLImage implementations are
        empty.

2022-07-30  Sam James        <sam@gentoo.org>

        * configure.ac: Fix Bashism in maintainer-mode check.

2022-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/miff.c (ImportRLEPixels): Add missing type cast for
        consistency with other similar code.  However, I do not believe
        this is an actual bug.  Addresses GraphicsMagick bug 670 "Missing
        cast".

2022-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/magic.c: Auto-detect JXL format based on file header.
        Much thanks to Quyen Pham Ngoc for noticing that this was missing.

2022-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * NEWS.txt: Update with news since last release.

2022-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Magick++/lib/Image.cpp: colorMapSize() method for returning the
        number of colormap entries should be a const method.  Change is
        due to an email from Miro Kropáček on May 29, 2022.

2022-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/Magick++/Image.rst: Update getIndexes() and
        getConstIndexes() documention to mention that the selected region
        is defined by a prior getPixels(), getConstPixels(), or
        setPixels() call.  This is inspired by private email from Miro
        Kropáček on May 8, 2022.

        * coders/jpeg.c (WriteJPEGImage): Change "arithmetic" to
        "arithmetic-coding" in order to match ImageMagick's previously
        existing syntax.

        * coders/png.c (ReadOnePNGImage): Assure that entire image list is