@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220731"
-#define public MagickPackageReleaseDate "snapshot-20220731"
+#define public MagickPackageVersionAddendum ".020220804"
+#define public MagickPackageReleaseDate "snapshot-20220804"
