@@ -35,6 +35,11 @@
 <div class="document">
 
 
+<p>2022-08-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* coders/tga.c (ReadTGAImage): Remove a defective validation of
+comment length, which blocked reading some sample TGA files from
+the &quot;Encyclopedia Of Graphics File Formats&quot; book.</blockquote>
 <p>2022-07-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* coders/heif.c: If module is compiled, but HasHEIF is not
